--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "node": ">= 0.8.0"
   },
   "scripts": {
-    "test": "grunt"
+    "test": "node test"
   },
   "dependencies": {
     "marked": "~0.2.9",
